--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             pointer-events: none;
         }
 
-        .hero-content { width: 1000px; }
+        .hero-content { max-width: 1000px; }
 
         .hero-tag {
             font-family: 'Space Mono', monospace;
