--- a/index.html
+++ b/index.html
@@ -632,12 +632,12 @@
                 <div class="email-template-box">
                     <h3>Quick Email Templates</h3>
                     <div class="email-btns">
-                        <a href="mailto:binod.basnet777@gmail.com?subject=Job%20Opportunity%20Inquiry&body=Hello%20Binod,%0D%0A%0D%0AI am reaching out regarding a job opportunity. Please provide more details about the position.%0D%0A%0D%0AThank you!" class="email-btn">
+                            <a href="mailto:binod.basnet777@gmail.com?subject=Job%20Opportunity&body=Hello%20Binod,%0D%0A%0D%0AI would like to discuss a job opportunity with you.%0D%0A%0D%0ALooking forward to your response.%0D%0A%0D%0ABest regards," class="email-btn">
                             <span class="icon">📧</span>
                             <span class="text">Job Opportunity</span>
                             <span class="arrow">→</span>
                         </a>
-                        <a href="mailto:binod.basnet777@gmail.com?subject=Scholarship%20Information&body=Hello%20Binod,%0D%0A%0D%0AI am interested in learning more about scholarship opportunities. Could you please share details and requirements?%0D%0A%0D%0AThank you!" class="email-btn">
+                            <a href="mailto:binod.basnet777@gmail.com?subject=Scholarship%20Opportunity&body=Hello%20Binod,%0D%0A%0D%0AI would like to share information about a scholarship opportunity.%0D%0A%0D%0APlease let me know if you are interested.%0D%0A%0D%0ABest regards," class="email-btn">
                             <span class="icon">🎓</span>
                             <span class="text">Scholarship Info</span>
                             <span class="arrow">→</span>
